--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -20,13 +20,13 @@ jobs:
 
     steps:
     - name: Checkout
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
 
     - name: Setup Terraform
-      uses: hashicorp/setup-terraform@v1
+      uses: hashicorp/setup-terraform@v2
 
     - name: Configure AWS Credentials
-      uses: aws-actions/configure-aws-credentials@v1
+      uses: aws-actions/configure-aws-credentials@v2
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -39,6 +39,7 @@ jobs:
       run: terraform fmt -check
 
     - name: Terraform Plan
+      id: plan
       run: |
         if [ -f "production.tfvars" ]; then
           terraform plan -var-file=production.tfvars -out=tfplan
@@ -52,15 +53,21 @@ jobs:
         else
           echo "plan_status=failure" >> $GITHUB_OUTPUT
         fi
+        
+        # Output the plan
+        terraform show -no-color tfplan > tfplan.txt
+
+    - name: Upload Terraform Plan
+      uses: actions/upload-artifact@v3
+      with:
+        name: tfplan
+        path: tfplan.txt
 
     - name: Terraform Apply
+      id: apply
       if: github.ref == 'refs/heads/main' && github.event_name == 'push' && steps.plan.outputs.plan_status == 'success'
       run: |
-        if [ -f "production.tfvars" ]; then
-          terraform apply -auto-approve -var-file=production.tfvars tfplan
-        else
-          terraform apply -auto-approve tfplan
-        fi
+        terraform apply -auto-approve tfplan
         
         # Capture the apply status
         if [ $? -eq 0 ]; then
@@ -68,3 +75,15 @@ jobs:
         else
           echo "apply_status=failure" >> $GITHUB_OUTPUT
         fi
+
+    - name: Terraform Output
+      if: steps.apply.outputs.apply_status == 'success'
+      run: |
+        terraform output -json > tf_output.json
+
+    - name: Upload Terraform Output
+      if: steps.apply.outputs.apply_status == 'success'
+      uses: actions/upload-artifact@v3
+      with:
+        name: terraform_output
+        path: tf_output.json
