--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -7,6 +7,9 @@ on:
     branches: [ main ]
   workflow_dispatch:
 
+env:
+  AWS_REGION: us-east-1  # Set your desired AWS region here
+
 jobs:
   terraform:
     name: 'Terraform'
@@ -24,16 +27,20 @@ jobs:
 
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v3
+      with:
+        terraform_version: "1.5.0"  # Specify your desired Terraform version here
 
     - name: Configure AWS Credentials
       uses: aws-actions/configure-aws-credentials@v4
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: us-east-1  # Replace with your desired AWS region
+        aws-region: ${{ env.AWS_REGION }}
 
     - name: Terraform Init
-      run: terraform init
+      run: |
+        terraform init \
+          -backend-config="region=${{ env.AWS_REGION }}"
 
     - name: Terraform Format
       run: terraform fmt -check
@@ -42,9 +49,9 @@ jobs:
       id: plan
       run: |
         if [ -f "production.tfvars" ]; then
-          terraform plan -var-file=production.tfvars -out=tfplan
+          terraform plan -var-file=production.tfvars -var="aws_region=${{ env.AWS_REGION }}" -out=tfplan
         else
-          terraform plan -out=tfplan
+          terraform plan -var="aws_region=${{ env.AWS_REGION }}" -out=tfplan
         fi
         
         # Capture the plan status
