--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -6,27 +6,16 @@ on:
   pull_request:
     branches: [ main ]
   workflow_dispatch:
-    inputs:
-      environment:
-        description: 'Environment to deploy to (dev/test/qa/production)'
-        required: true
-        default: 'dev'
-        type: choice
-        options:
-        - dev
-        - test
-        - qa
-        - production
+
+env:
+  AWS_REGION: us-east-1  # Set your desired AWS region here
 
 jobs:
   terraform:
     name: 'Terraform'
     runs-on: ubuntu-latest
     
-    environment: ${{ github.event.inputs.environment || 'dev' }}
-    
-    env:
-      AWS_REGION: us-east-1  # Set your desired AWS region here
+    environment: production
     
     defaults:
       run:
@@ -51,8 +40,7 @@ jobs:
     - name: Terraform Init
       run: |
         terraform init \
-          -backend-config="region=${{ env.AWS_REGION }}" \
-          -backend-config="key=terraform/${{ github.event.inputs.environment || 'dev' }}.tfstate"
+          -backend-config="region=${{ env.AWS_REGION }}"
 
     - name: Terraform Format
       run: terraform fmt -check
@@ -60,11 +48,9 @@ jobs:
     - name: Terraform Plan
       id: plan
       run: |
-        ENV="${{ github.event.inputs.environment || 'dev' }}"
-        if [ -f "${ENV}.tfvars" ]; then
-          terraform plan -var-file=${ENV}.tfvars -out=tfplan
+        if [ -f "production.tfvars" ]; then
+          terraform plan -var-file=production.tfvars -out=tfplan
         else
-          echo "No ${ENV}.tfvars file found. Using default variables."
           terraform plan -out=tfplan
         fi
         
@@ -80,3 +66,31 @@ jobs:
 
     - name: Upload Terraform Plan
       uses: actions/upload-artifact@v4
+      with:
+        name: tfplan
+        path: tfplan.txt
+
+    - name: Terraform Apply
+      id: apply
+      if: github.ref == 'refs/heads/main' && github.event_name == 'push' && steps.plan.outputs.plan_status == 'success'
+      run: |
+        terraform apply -auto-approve tfplan
+        
+        # Capture the apply status
+        if [ $? -eq 0 ]; then
+          echo "apply_status=success" >> $GITHUB_OUTPUT
+        else
+          echo "apply_status=failure" >> $GITHUB_OUTPUT
+        fi
+
+    - name: Terraform Output
+      if: steps.apply.outputs.apply_status == 'success'
+      run: |
+        terraform output -json > tf_output.json
+
+    - name: Upload Terraform Output
+      if: steps.apply.outputs.apply_status == 'success'
+      uses: actions/upload-artifact@v4
+      with:
+        name: terraform_output
+        path: tf_output.json
