--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -21,7 +21,7 @@ jobs:
     name: 'Terraform'
     runs-on: ubuntu-latest
     
-    environment: ${{ github.event.inputs.environment }}
+    environment: prod
     
     defaults:
       run:
